# cvat

./: .gitignore  package.json  pyproject.toml
cvat-core/: package.json
docs/: index.html
docs/_print/: index.html
docs/administration/: index.html
docs/administration/_print/: index.html
docs/administration/advanced/: index.html
docs/administration/advanced/_print/: index.html
docs/administration/advanced/analytics/: index.html
docs/administration/advanced/backup_guide/: index.html
docs/administration/advanced/custom_certificates/: index.html
docs/administration/advanced/cvat-architecture/: index.html
docs/administration/advanced/installation_automatic_annotation/: index.html
docs/administration/advanced/k8s_deployment_with_helm/: index.html
docs/administration/basics/: index.html
docs/api_sdk/: index.html
docs/api_sdk/_print/: index.html
docs/api_sdk/api/: index.html
docs/api_sdk/cli/: index.html
docs/api_sdk/sdk/: index.html
docs/contributing/: index.html
docs/contributing/_print/: index.html
docs/contributing/branching-model/: index.html
docs/contributing/bug-reports/: index.html
docs/contributing/coding-style/: index.html
docs/contributing/development-environment/: index.html
docs/contributing/feature-requests/: index.html
docs/contributing/new-annotation-format/: index.html
docs/contributing/pull-requests/: index.html
docs/contributing/repo-structure/: index.html
docs/contributing/running-tests/: index.html
docs/contributing/server-profiling/: index.html
docs/contributing/setup-additional-components/: index.html
docs/contributing/using-the-issue-tracker/: index.html
docs/enterprise/: index.html
docs/enterprise/_print/: index.html
docs/enterprise/immediate-feedback/: index.html
docs/enterprise/segment-anything-2-tracker/: index.html
docs/enterprise/shapes-converter/: index.html
docs/enterprise/social-accounts-configuration/: index.html
docs/enterprise/sso/: index.html
docs/enterprise/subscription-management/: index.html
docs/faq/: index.html
docs/getting_started/: index.html
docs/getting_started/_print/: index.html
docs/getting_started/introduction-to-cvat-and-datumaro/: index.html
docs/getting_started/overview/: index.html
docs/getting_started/workflow-org/: index.html
docs/integration/: index.html
docs/integration/_print/: index.html
docs/integration/fiftyone/: index.html
docs/integration/human-protocol/: index.html
docs/manual/: index.html
docs/manual/_print/: index.html
docs/manual/advanced/: index.html
docs/manual/basics/: index.html
example/: check_sdk_contents.py  check_sdk_mask.py  oneformer_instance_seg.py  upload_func.py  yolo11_func.py  yolo11_pose_func.py
page_404/: index.html
search/: index.html
tests/python/: requirements.txt
(+338 files in other folders)
