[tool.isort]
profile = "black"
forced_separate = ["tests"]
line_length = 100
skip_gitignore = true # align tool behavior with Black
extend_skip=[
    # Correctly ordering the imports in serverless functions would
    # require a pyproject.toml in every function; don't bother with it for now.
    "serverless",
]

[tool.black]
line-length = 100
target-version = ['py39']
extend-exclude = """
# TODO: get rid of these
^/cvat/apps/(
    dataset_manager/(
        annotation.py
        |bindings.py
        |project.py
        |serializers.py
        |task.py
    )
    |engine/(
        admin.py
        |backup.py
        |cloud_provider.py
        |media_extractors.py
        |mixins.py
        |models.py
        |permissions.py
        |serializers.py
        |task.py
        |views.py
    )
)
| ^/serverless/
"""

[project]
name = "cvat-related-tools"
version = "0.1.0"
dependencies = [
    "cvat-cli>=2.37.0",
    "cvat-sdk>=2.37.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "pycocotools>=2.0.8",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
    "ultralytics>=8.3.145",
]
